--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Server Configuration
-server.port=8081
+server.port=8080
 server.servlet.context-path=/api
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/coffee_shop
+spring.datasource.url=jdbc:mysql://db:3306/coffee_shop
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
